<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@drawable/bg_bottom_nav"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingStart="6dp"
    android:paddingEnd="6dp">

    <LinearLayout
        android:id="@+id/navHome"
        style="@style/BottomNavItem">

        <ImageView
            android:id="@+id/navHomeIcon"
            style="@style/BottomNavIcon"
            android:contentDescription="@null"
            android:src="@drawable/ic_home" />

        <TextView
            style="@style/BottomNavLabel"
            android:text="@string/nav_home" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navWind"
        style="@style/BottomNavItem">

        <ImageView
            android:id="@+id/navWindIcon"
            style="@style/BottomNavIcon"
            android:contentDescription="@null"
            android:src="@drawable/ic_padlock" />

        <TextView
            style="@style/BottomNavLabel"
            android:text="@string/nav_wind" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navContact"
        style="@style/BottomNavItem">

        <ImageView
            android:id="@+id/navContactIcon"
            style="@style/BottomNavIcon"
            android:contentDescription="@null"
            android:src="@drawable/ic_phone_book" />

        <TextView
            style="@style/BottomNavLabel"
            android:text="@string/nav_contact" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navClub"
        style="@style/BottomNavItem">

        <ImageView
            android:id="@+id/navClubIcon"
            style="@style/BottomNavIcon"
            android:contentDescription="@null"
            android:src="@drawable/ic_people" />

        <TextView
            style="@style/BottomNavLabel"
            android:text="@string/nav_club" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navNotice"
        style="@style/BottomNavItem">

        <ImageView
            android:id="@+id/navNoticeIcon"
            style="@style/BottomNavIcon"
            android:contentDescription="@null"
            android:src="@drawable/ic_megaphone" />

        <TextView
            style="@style/BottomNavLabel"
            android:text="@string/nav_notice" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navLab"
        style="@style/BottomNavItem">

        <ImageView
            android:id="@+id/navLabIcon"
            style="@style/BottomNavIcon"
            android:contentDescription="@null"
            android:src="@drawable/ic_tube" />

        <TextView
            style="@style/BottomNavLabel"
            android:text="@string/nav_lab" />
    </LinearLayout>
</LinearLayout>
